--- a/artificial_life.html
+++ b/artificial_life.html
@@ -20,9 +20,12 @@
 		<h1>GCT 753</h1>
 		<a href="index.html">Overview</a><br/>
 		<a href="software.html">Software</a><br/>
-		<a href="lua.html">Lua Tutorial</a><br/>
+		&gt; <a href="lua.html">Lua</a><br/>
 		&gt;&gt; <a href="https://github.com/grrrwaaa/gct753">GitHub</a><br/>
 		&gt;&gt; <a href="http://grrrwaaa.github.com/gct753/docs/reference.html">Reference</a><br/>
+		&gt; <a href="lua.html">JavaScript</a><br/>
+		&gt;&gt; <a href="https://github.com/grrrwaaa/gct753/tree/gh-pages">GitHub</a><br/>
+		
 		<br>
 		<a href="introduction.html">Themes</a><br/>
 		<a href="artificial_life.html">Artificial Life</a><br/>
