--- a/software.html
+++ b/software.html
@@ -20,11 +20,8 @@
 		<h1>GCT 753</h1>
 		<a href="index.html">Overview</a><br/>
 		<a href="software.html">Software</a><br/>
-		&gt; <a href="lua.html">Lua</a><br/>
-		&gt;&gt; <a href="https://github.com/grrrwaaa/gct753">GitHub</a><br/>
-		&gt;&gt; <a href="http://grrrwaaa.github.com/gct753/docs/reference.html">Reference</a><br/>
-		&gt; <a href="lua.html">JavaScript</a><br/>
-		&gt;&gt; <a href="https://github.com/grrrwaaa/gct753/tree/gh-pages">GitHub</a><br/>
+		&gt; <a href="lua.html">Lua</a> (<a href="https://github.com/grrrwaaa/gct753">GitHub</a>, <a href="http://grrrwaaa.github.com/gct753/docs/reference.html">Reference</a>)<br/>
+		&gt; <a href="lua.html">JavaScript</a> (<a href="https://github.com/grrrwaaa/gct753/tree/gh-pages">GitHub</a>)<br/>
 		
 		<br>
 		<a href="introduction.html">Themes</a><br/>
