--- a/agent.html
+++ b/agent.html
@@ -21,7 +21,7 @@
 		<a href="index.html">Overview</a><br/>
 		<a href="software.html">Software</a><br/>
 		&gt; <a href="lua.html">Lua</a> (<a href="https://github.com/grrrwaaa/gct753">GitHub</a>, <a href="http://grrrwaaa.github.com/gct753/docs/reference.html">Reference</a>)<br/>
-		&gt; <a href="lua.html">JavaScript</a> (<a href="https://github.com/grrrwaaa/gct753/tree/gh-pages">GitHub</a>)<br/>
+		&gt; <a href="js.html">JavaScript</a> (<a href="https://github.com/grrrwaaa/gct753/tree/gh-pages">GitHub</a>)<br/>
 		
 		<br>
 		<a href="introduction.html">Themes</a><br/>
