--- a/js.html
+++ b/js.html
@@ -33,7 +33,13 @@
 		<a href="evolutionary.html">Evolutionary Systems</a><br/>
 		
 	</div>
-	<div class="section"><h1>Using JavaScript and al.js</h1>
+	<div class="section"><h1>Examples</h1>
+<ul>
+<li><a href="js.life.html">Game of Life</a></li>
+<li><a href="js.ants.html">Langton&#39;s ant</a></li>
+<li><a href="js.ants2.html">Langton&#39;s ant (multiple ants + sound</a></li>
+</ul>
+<h1>Using JavaScript and al.js</h1>
 <p>Since 2014 we are also offering class material using a browser-based JavaScript implementation. Most of the library code is in <a href="http://grrrwaaa.github.io/gct753/al.min.js"><a href="http://grrrwaaa.github.io/gct753/al.min.js">http://grrrwaaa.github.io/gct753/al.min.js</a></a> (or, for an uncompressed version, see <a href="http://grrrwaaa.github.io/gct753/al.js"><a href="http://grrrwaaa.github.io/gct753/al.js">http://grrrwaaa.github.io/gct753/al.js</a></a>). This library replicates many of the capabilities of last year&#39;s Lua based system, and adds a few new ones. Graphical rendering uses HTML5 Canvas API and sound is built on the ScriptProcessingNode API, so a recent version of Chrome, FireFox or Safari is recommended (IE probably won&#39;t work). </p>
 <p>Please look at <a href="js.life.html">the Game of Life example</a> and <strong>view source</strong> to get an idea of the template:</p>
 <pre><code><span class="doctype">&lt;!DOCTYPE html&gt;</span>
