--- a/js.fire.html
+++ b/js.fire.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<!--<script src="http://grrrwaaa.github.io/gct753/al.min.js"></script>-->
-<script src="al.min.js"></script>
+<script src="http://grrrwaaa.github.io/gct753/al.min.js"></script>
 <style>
 body {
 	background: #eee;
