--- a/js.brian.html
+++ b/js.brian.html
@@ -74,6 +74,6 @@ function update() {
 
 al.start();
 </script>
-<a href="js.ants.html">See also ants1</a>
+<a href="js.html">Documentation</a>
 </body>
 </html>
