--- a/js.html
+++ b/js.html
@@ -35,6 +35,7 @@
 	</div>
 	<div class="section"><h1>Examples</h1>
 <ul>
+<li>Cellular Automata<ul>
 <li><a href="js.life.html">Game of Life</a></li>
 <li><a href="js.brain.html">Brian&#39;s Brain</a></li>
 <li><a href="js.fire.html">Forest fire</a></li>
@@ -42,6 +43,8 @@
 <li><a href="js.ants2.html">Langton&#39;s ant (multiple ants + sound)</a></li>
 <li><a href="js.block.html">Block rules</a></li>
 <li><a href="js.hodgepodge.html">Hodgepodge</a></li>
+</ul>
+</li>
 </ul>
 <h1>Using JavaScript and al.js</h1>
 <p>Since 2014 we are also offering class material using a browser-based JavaScript implementation. Most of the library code is in <a href="http://grrrwaaa.github.io/gct753/al.min.js"><a href="http://grrrwaaa.github.io/gct753/al.min.js">http://grrrwaaa.github.io/gct753/al.min.js</a></a> (or, for an uncompressed version, see <a href="http://grrrwaaa.github.io/gct753/al.js"><a href="http://grrrwaaa.github.io/gct753/al.js">http://grrrwaaa.github.io/gct753/al.js</a></a>). This library replicates many of the capabilities of last year&#39;s Lua based system, and adds a few new ones. Graphical rendering uses HTML5 Canvas API and sound is built on the ScriptProcessingNode API, so a recent version of Chrome, FireFox or Safari is recommended (IE probably won&#39;t work). </p>
