--- a/cellular.html
+++ b/cellular.html
@@ -28,7 +28,7 @@
 		<a href="artificial_life.html">Artificial Life</a><br/>
 		<a href="generative_art.html">Generative Art</a><br/>
 		<a href="cellular.html">Cellular Systems</a><br/>
-		<a href="agent.html">Agent Systems</a><br/>
+		<a href="agent.html">Agent Systems</a> (<a href="vectors.html">vectors</a>)<br/>
 		<a href="symbol.html">Symbol Systems</a><br/>
 		<a href="evolutionary.html">Evolutionary Systems</a><br/>
 		
