--- a/js.fire.html
+++ b/js.fire.html
@@ -20,7 +20,7 @@ al.init();
 /// put your code here /////////////////////////////////////////////////////////
 
 var dimx = 256;
-var dimy = dimx/2;
+var dimy = dimx;
 
 var field = new field2D(dimx, dimy);
 var past = new field2D(dimx, dimy);
