--- a/js.mccabe.html
+++ b/js.mccabe.html
@@ -20,7 +20,7 @@ al.init();
 
 // inspired by http://www.jonathanmccabe.com/Cyclic_Symmetric_Multi-Scale_Turing_Patterns.pdf
 
-var w = 64, h = w/2;
+var w = 64, h = w;
 
 // In this model there is only one “substance”, which takes the role of pigmentation, activator and inhibitor
 // It is represented by a single floating point number for every element of a rectangular array. The elements of the array may be considered to be equivalent to the cells in the discrete model put forward by Turing in his paper.
