--- a/js.ants.html
+++ b/js.ants.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<script src="http://grrrwaaa.github.io/gct753/al.min.js"></script>
+<script src="al.min.js"></script>
 <style>
 body {
 	background: #eee;
@@ -18,7 +18,7 @@ al.init();
 
 /// put your code here /////////////////////////////////////////////////////////
 
-var dimx = 256, dimy = 128;
+var dimx = 256, dimy = 256;
 var field = new field2D(dimx, dimy);
 
 // turn it white:
