--- a/js.hodgepodge.html
+++ b/js.hodgepodge.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<script src="http://grrrwaaa.github.io/gct753/al.min.js"></script>
+<script src="al.min.js"></script>
 <style>
 body {
 	background: #eee;
@@ -20,7 +20,7 @@ al.init();
 /// put your code here /////////////////////////////////////////////////////////
 
 var dimx = 256;
-var dimy = dimx/2;
+var dimy = dimx;
 
 var field = new field2D(dimx, dimy);
 var past = new field2D(dimx, dimy);
