--- a/js.life.html
+++ b/js.life.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<script src="http://grrrwaaa.github.io/gct753/al.min.js"></script>
+<script src="al.min.js"></script>
 <style>
 body {
 	background: #eee;
@@ -18,7 +18,7 @@ al.init();
 
 /// put your code here /////////////////////////////////////////////////////////
 
-var w = 256, h = 128;
+var w = 256, h = w;
 var game = new field2D(w, h);
 var past = new field2D(w, h);
 
